--- a/app/templates/spider.html
+++ b/app/templates/spider.html
@@ -49,8 +49,8 @@
   </div>
 </div>
 
+<pre id="output"></pre>
 <div id="scanStatusDisplay"></div>
-
 <!--SCRIPT for when sending requests to the backend zap api -->
 <script>
   function startScan(apiEndpoint) {
