--- a/app/templates/spider.html
+++ b/app/templates/spider.html
@@ -45,17 +45,12 @@
     <!--buttons to start scans functions-->
     <button onclick="startSpider()" class="btn btn-primary">Start Spider Scan</button>
     <button onclick="startActiveScan()" class="btn btn-secondary">Start Active Scan</button>
+    <button onclick="viewScanStatus()" class="btn btn-info">check scan status</button>
   </div>
 </div>
 
-<div class="container d-flex justify-content-center align-items-center">
-  <div class="row justify-content-center">
-<input type="text" id="scanId" class="form-control" placeholder="Enter scanId to fetch results">
-<button onclick="viewScanStatus()" class="btn btn-info">Check Scan Status</button>
-</div>
-</div>
 <pre id="output"></pre>
-<div id="scanStatusDisplay"></div>
+
 <!--SCRIPT for when sending requests to the backend zap api -->
 <script>
   function startScan(apiEndpoint) {
@@ -84,31 +79,24 @@
   function startActiveScan() {
     startScan('/start_active_scan');
   }
-  function viewScanStatus(scanId) {
+
+  function viewScanStatus() {
     var scanId = document.getElementById('scanId').value;
-    fetch(`/view_scan_status?scan_id=${scanId}`)
-    .then(response => response.json())
-    .then(data => {
-        let outputHtml = '';
-        if (data && data.status) {
-            outputHtml = `<div class="scan-status">
-                              <p>Status: ${data.status}</p>
-                          </div>`;
-        } else {
-            outputHtml = '<p>No status found or error occurred.</p>';
-        }
-        document.getElementById('scanStatusDisplay').innerHTML = outputHtml;
+    fetch('/get_scan_status', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ scanId: scanId })
     })
-    .catch(error => {
-        console.error('Error fetching scan status:', error);
-        document.getElementById('scanStatusDisplay').innerHTML = '<p>Error fetching scan status.</p>';
-    });
-}
+      .then(response => response.json())
+      .then(data => {
+        document.getElementById('scanStatusDisplay').textContent = 'Scan Status: ' + JSON.stringify(data, null, 2);
+      })
+      .catch(error => console.error('Error:', error));
+  }
+
 
 
 </script>
-
-
 </div>
 </div>
 {% endblock %}
