fix scan status

--- a/app/templates/spider.html
+++ b/app/templates/spider.html
@@ -50,6 +50,7 @@
 </div>
 
 <pre id="output"></pre>
+<div id="scanStatusDisplay" class="alert alert-info" role="alert"></div>
 
 <!--SCRIPT for when sending requests to the backend zap api -->
 <script>
