fix scan status

--- a/app/templates/spider.html
+++ b/app/templates/spider.html
@@ -42,6 +42,7 @@
 <div class="container d-flex justify-content-center align-items-center">
   <div class="row justify-content-center">
     <input type="text" id="targetUrl" class="form-control" placeholder="Enter target URL">
+    <input type="text" id="scanId" class="form-control" placeholder="Enter scan Id">
     <!--buttons to start scans functions-->
     <button onclick="startSpider()" class="btn btn-primary">Start Spider Scan</button>
     <button onclick="startActiveScan()" class="btn btn-secondary">Start Active Scan</button>
