--- a/app/templates/spider.html
+++ b/app/templates/spider.html
@@ -28,10 +28,10 @@
   
 
   .result-box {
-    background-color: #f8f9fa;
-    border: 1px solid #dee2e6;
+    background-color: #323840;
+    border-radius: 5px;
     padding: 20px;
-    border-radius: 0.25rem;
+    color: #fff;
     font-family: 'Courier New', Courier, monospace; /* Monospace font for better readability */
     white-space: pre-wrap; /* Maintains whitespace formatting */
     overflow-x: auto; /* Adds horizontal scrollbar if needed */
