--- a/app/templates/spider.html
+++ b/app/templates/spider.html
@@ -52,7 +52,7 @@
     <input type="text" id="scanId" class="form-control" placeholder="Enter scan Id">
     <button onclick="viewScanStatus()" class="btn btn-info">Check Scan Status</button>
     <button onclick="viewXmlReport()" class="btn btn-info">View Report</button>
-    <div id="scanStatusDisplay" class="alert alert-info" role="alert"></div>
+    <div id="scanStatusDisplay" ></div>
     <pre id="xmlDisplay" class="result-box"></pre>
   </div>
 </div>
