--- a/app/templates/spider.html
+++ b/app/templates/spider.html
@@ -102,11 +102,10 @@
         if (data.error) {
             document.getElementById('scanStatusDisplay').innerHTML = `<div class="alert alert-danger">Error: ${data.error}</div>`;
         } else {
-            document.getElementById('scanStatusDisplay').innerHTML = `<div class="alert alert-success">Scan Status: ${data.status}</div>`;
+            document.getElementById('scanStatusDisplay').innerHTML = `<div class="alert ">Scan Status: ${data.status}%</div>`;
         }
     })
     .catch(error => {
-        console.error('Error:', error);
         document.getElementById('scanStatusDisplay').innerHTML = `<div class="alert alert-danger">Error: ${error.message}</div>`;
     });
 }
